--- a/index.html
+++ b/index.html
@@ -5,19 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Etiqueta necesaria para trabajar con resposive design-->
     <meta http-equiv="X-UA-Compatible" content="ie=edge"><!--Para agregar compatibilidad con internet explorer-->
     <title>Mi blog</title><!--Titulo del documento-->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/normalize.css"> <!--Para estandarizar los estilos independientemente del navegador web-->
+    <link rel="stylesheet" href="css/main.css"> <!--Para linkear nuestro css-->
+    <link rel="stylesheet" href="css/font/flaticon.css">
 </head>
 <body>
-    <header>
-        <section></section>
-        <nav>
-            <section>
-                <a href="">Logo</a>
-            </section>
-            <section>
-                <a href="">Sobre mi</a>
-            </section>
+    <header><!--Grid container-->
+        <section class="header-icons-container"><!--Grid container-->
+            <div class="icons"><!--flexbox-->
+                <a href=""><span class="flaticon-001-facebook"></span></a>
+                <a href=""><span class="flaticon-002-twitter"></span></a>
+                <a href=""><span class="flaticon-011-instagram"></span></a>
+                <a href=""><span class="flaticon-010-linkedin"></span></a>
+                <a href=""><span class="flaticon-008-youtube"></span></a>
+            </div><!--icons-->
+        </section><!--header-icons-container-->
+        <nav><!--Grid contaner-->
+            <section class="nav-logo-container">
+                <a href="/">
+                    <img src="assets/img/Logo-negro.png" alt="Logo de mi block">
+                </a>
+            </section><!--nav-logo-container-->
+            <section class="profile-link"><!--flexbox-->
+                <a href="perfil.html">Sobre mi</a>
+            </section><!--profile-link-->
         </nav>
     </header>
+    <main class="home-main">
+        <section>
+            <p class="home-main-text">Conoce las novedades y noticias del Mundo Tech</p>
+            <button class="home-main-button">
+               <a href="blogs.html">Entrar</a> 
+            </button>
+        </section>
+    </main>
 </body>
 </html>
