--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav><!--Grid contaner-->
             <section class="nav-logo-container">
                 <a href="/">
-                    <img src="assets/img/Logo-negro.png" alt="Logo de mi block">
+                    <img src="https://i.imgur.com/H9Mf0l7.png" alt="Logo de mi block">
                 </a>
             </section><!--nav-logo-container-->
             <section class="profile-link"><!--flexbox-->
