Terminada nuestra pagina de blogs.html, anadiendo todo el html y css necesario, asi como tambien sus imagenes correspodientes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/main.css"> <!--Para linkear nuestro css-->
     <link rel="stylesheet" href="css/font/flaticon.css">
 </head>
-<body>
+<body class="home-body">
     <header><!--Grid container-->
         <section class="header-icons-container"><!--Grid container-->
             <div class="icons"><!--flexbox-->
