Terminada la pagina de perfil.html

--- a/blog.html
+++ b/blog.html
@@ -51,14 +51,14 @@
                 <div class="contact-divs">
                     <img src="assets/img/013-newsletter.png" alt="">
                     <div class="contact-left">
-                        <a href="">Contacto</a>
+                        <a href="perfil.html">Contacto</a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div><!--contact-left-->
                 </div>
                 <div class="contact-divs">
                     <img src="assets/img/006-like.png" alt="">
                     <div class="contact-right">
-                        <a href="">Escribe</a>
+                        <a href="perfil.html">Escribe</a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
                     </div><!--contact-right-->
                 </div>
