Se cambiaron los links de las imagenes para que coincidieran con las de imgur y se eliminaron del repositorio local

--- a/perfil.html
+++ b/perfil.html
@@ -34,7 +34,7 @@
     <main>
         <section class="perfil-main-container">
             <div class="perfil-container">
-                <img src="assets/img/perfil-foto.jpg" alt="Foto Perfil" class="perfil-photo">
+                <img src="https://i.imgur.com/5gz0MAR.jpg" alt="Foto Perfil" class="perfil-photo">
                 <div class="perfil-description">
                     <h1>Hola!</h1>
                     <p>Texto de intro. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium nemo dolorum obcaecati esse culpa, reprehenderit delectus quam mollitia expedita excepturi soluta, voluptate alias aliquam quaerat nobis minus vitae facere maxime? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat alias quisquam, voluptas.</p>
@@ -66,14 +66,14 @@
         <section class="contact-main-container">
             <div class="contact-main-container-flex">
                 <div class="contact-divs">
-                    <img src="assets/img/013-newsletter.png" alt="">
+                    <img src="https://i.imgur.com/912jsgs.png" alt="">
                     <div class="contact-left">
                         <a href="">Contacto</a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div><!--contact-left-->
                 </div>
                 <div class="contact-divs">
-                    <img src="assets/img/006-like.png" alt="">
+                    <img src="https://i.imgur.com/GaQgLYX.png" alt="">
                     <div class="contact-right">
                         <a href="">Escribe</a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
