Se cambio el link del enlace en el header para que nos reediija al index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </section><!--header-icons-container-->
         <nav><!--Grid contaner-->
             <section class="nav-logo-container">
-                <a href="/">
+                <a href="index.html">
                     <img src="https://i.imgur.com/H9Mf0l7.png" alt="Logo de mi block">
                 </a>
             </section><!--nav-logo-container-->
