Se cambiaron los link de alguns imagenes para que coincidieran con las del repositorio de imgur

--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
         <nav><!--Grid contaner-->
             <section class="nav-logo-container">
                 <a href="index.html">
-                    <img src="assets/img/Logo-negro.png" alt="Logo de mi block">
+                    <img src="https://i.imgur.com/H9Mf0l7.png" alt="Logo de mi block">
                 </a>
             </section><!--nav-logo-container-->
             <section class="profile-link"><!--flexbox-->
@@ -33,7 +33,7 @@
     </header>
     <main>
         <section class="grid-container blogpost-img-container">
-            <img src="assets/img/post-6.png" alt="">
+            <img src="https://i.imgur.com/cgVpito.png" alt="">
         </section><!--blogpost-img-container-->
         <section class="blogpost-main-container">
             <div class="grid-container container">
@@ -49,14 +49,14 @@
         <section class="contact-main-container">
             <div class="contact-main-container-flex">
                 <div class="contact-divs">
-                    <img src="assets/img/013-newsletter.png" alt="">
+                    <img src="https://i.imgur.com/912jsgs.png" alt="">
                     <div class="contact-left">
                         <a href="perfil.html">Contacto</a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div><!--contact-left-->
                 </div>
                 <div class="contact-divs">
-                    <img src="assets/img/006-like.png" alt="">
+                    <img src="https://i.imgur.com/GaQgLYX.png" alt="">
                     <div class="contact-right">
                         <a href="perfil.html">Escribe</a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
