--- a/blogs.html
+++ b/blogs.html
@@ -23,7 +23,7 @@
         <nav><!--Grid contaner-->
             <section class="nav-logo-container">
                 <a href="index.html">
-                    <img src="assets/img/Logo-negro.png" alt="Logo de mi block">
+                    <img src="https://i.imgur.com/H9Mf0l7.png" alt="Logo de mi block">
                 </a>
             </section><!--nav-logo-container-->
             <section class="profile-link"><!--flexbox-->
@@ -36,7 +36,7 @@
             <div class="grid-container blogs-main-new">
                 <h3>Noticias</h3>
                 <div class="blogs-news-img-container">
-                    <img src="assets/img/main-news-img.png" alt="">
+                    <img src="https://i.imgur.com/cgVpito.png" alt="">
                 </div><!--blogs-news-img-container-->
                 <div class="blogs-news-info-container">
                     <h2>Titulo del blogpost</h2>
