Se cambio la foto de perfil, añadimos media-queries.css con un media-queryorientado para celulares.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/normalize.css"> <!--Para estandarizar los estilos independientemente del navegador web-->
     <link rel="stylesheet" href="css/main.css"> <!--Para linkear nuestro css-->
     <link rel="stylesheet" href="css/font/flaticon.css">
+    <link rel="stylesheet" href="css/media-queries.css">
 </head>
 <body class="home-body">
     <header><!--Grid container-->
