--- a/perfil.html
+++ b/perfil.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/normalize.css"> <!--Para estandarizar los estilos independientemente del navegador web-->
     <link rel="stylesheet" href="css/main.css"> <!--Para linkear nuestro css-->
     <link rel="stylesheet" href="css/font/flaticon.css">
+    <link rel="stylesheet" href="css/media-queries.css">
 </head>
 <body>
     <header><!--Grid container-->
@@ -34,7 +35,7 @@
     <main>
         <section class="perfil-main-container">
             <div class="perfil-container">
-                <img src="https://i.imgur.com/5gz0MAR.jpg" alt="Foto Perfil" class="perfil-photo">
+                <img src="https://i.imgur.com/6TI1nwN.jpg" alt="Foto Perfil" class="perfil-photo">
                 <div class="perfil-description">
                     <h1>Hola!</h1>
                     <p>Texto de intro. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium nemo dolorum obcaecati esse culpa, reprehenderit delectus quam mollitia expedita excepturi soluta, voluptate alias aliquam quaerat nobis minus vitae facere maxime? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat alias quisquam, voluptas.</p>
